Refactor testcase to not use MethodDummy directly and enforce method misordering by the JVM through inheritance