@@ -3,7 +3,7 @@ package org.mozilla.javascript.tests;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
+import java.util.function.Supplier;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.mozilla.javascript.Context;
@@ -17,8 +17,11 @@ import org.mozilla.javascript.testutils.Utils;
  */
 public class NativeJavaMethodTest {
 
-    public static class MethodDummy {
+    public abstract static class CaptureDummy {
         public final List<String> captured = new ArrayList<>();
+    }
+
+    public static class MethodDummy extends CaptureDummy {
 
         public void f1(String s) {
             captured.add("1");
@@ -43,31 +46,52 @@ public class NativeJavaMethodTest {
         public void fN(String s1, String s2, String... sN) {
             captured.add("N." + sN.length);
         }
+    }
 
-        public void f3(Map<String, String> m, String... sN) {
-            captured.add("3.N");
-        }
-
-        public void f3(Map<String, String> m, Class<?> c, String... sN) {
-            captured.add("3.C.N");
+    public abstract static class NonVarArgParent extends CaptureDummy {
+        public void someMethod(int i) {
+            captured.add("NonVarArgParent.someMethod");
         }
     }
 
-    private static void expect(List<String> expected, String... lines) {
+    public static class VarArgAtSubclass extends NonVarArgParent {
+        public void someMethod(int i, int... extra) {
+            captured.add("VarArgAtSubclass.someMethod");
+        }
+    }
+
+    public abstract static class VarArgParent extends CaptureDummy {
+        public void someMethod(int i, int... extra) {
+            captured.add("VarArgParent.someMethod");
+        }
+    }
+
+    public static class VarArgAtParent extends VarArgParent {
+        public void someMethod(int i) {
+            captured.add("VarArgAtParent.someMethod");
+        }
+    }
+
+    public static void expect(List<String> expected, String... lines) {
+        expect(expected, MethodDummy::new, lines);
+    }
+
+    public static void expect(
+            List<String> expected, Supplier<CaptureDummy> beanSupplier, String... lines) {
         Utils.runWithAllModes(
                 cx -> {
-                    final var methodDummy = new MethodDummy();
-                    final var scope = initContext(cx, methodDummy);
+                    final var bean = beanSupplier.get();
+                    final var scope = initContext(cx, bean);
 
                     cx.evaluateString(
                             scope, String.join("\n", lines), "NativeJavaMethodTest.js", 0, null);
 
-                    Assertions.assertEquals(expected, methodDummy.captured);
+                    Assertions.assertEquals(expected, bean.captured);
                     return null;
                 });
     }
 
-    private static ScopeObject initContext(Context cx, MethodDummy methodDummy) {
+    private static ScopeObject initContext(Context cx, CaptureDummy methodDummy) {
         cx.setLanguageVersion(Context.VERSION_ES6);
         final var scope = cx.initStandardObjects();
         ScriptableObject.putProperty(scope, "d", Context.javaToJS(methodDummy, scope));
@@ -117,11 +141,18 @@ public class NativeJavaMethodTest {
     }
 
     @Test
-    void overloadClass() {
+    void overloadMethodOrdering() {
         expect(
-                Arrays.asList("3.N", "3.C.N"),
-                "d.f3({'foo':'bar'}, 'baz');",
-                "d.f3({'foo':'bar'}, java.lang.String, 'baz');");
+                List.of("NonVarArgParent.someMethod", "VarArgAtSubclass.someMethod"),
+                VarArgAtSubclass::new,
+                "d.someMethod(1);",
+                "d.someMethod(1, 2);");
+
+        expect(
+                List.of("VarArgAtParent.someMethod", "VarArgParent.someMethod"),
+                VarArgAtParent::new,
+                "d.someMethod(1);",
+                "d.someMethod(1, 2);");
     }
 
     @Test
